# v1

./: .gitignore  UpgradeLog.htm  VI_GUI.sln  service.sln
Installer/: v1_contoller_setup.iss
Installer/setup_resource/: config.json  license.txt
Setup1/: Setup1.vdproj
Simulator/: tcpclient.py  tcpserver.py  tcpserver2.py
VI_GUI/: TcpClient.cpp  TcpClient.h  Utility.cpp  Utility.h  VIGUI.APS  VIGUI.rc  VI_GUI.cpp  VI_GUI.h  VI_GUI.vcxproj  VI_GUI.vcxproj.filters.txt  VI_GUIDlg.cpp  VI_GUIDlg.cpp~RF46b3f28.TMP  VI_GUIDlg.cpp~RF513a000.TMP  VI_GUIDlg.h  config.json  resource.h  stdafx.cpp
VI_GUI/res/: VIGUI.rc2
VI_GUI/x64/Release/: VIGUI.res
VI_GUI/x64/Release/VI_GUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VI_GUI.lastbuildstate  VI_GUI.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
project/: CMakeCache.txt  CMakeLists.txt  Makefile  a_drop_sample.jrq  a_job_sample.jrq  cmake_install.cmake  config.json  main.cpp  main.cxx  service.vcxproj  service.vcxproj.filters
project/XYZRobot/: JobManager.cpp  JobManager.h  Makefile  cmake_install.cmake  modbus.cpp  modbus.h  utility.cpp  utility.h  xyz_robot.cpp  xyz_robot.h
setup_resource/: config.json
